--- a/dev/index.Rmd
+++ b/dev/index.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Statistica e Sociologia Generale"
-subtitle: "Corso di laurea in TECNICHE DELLA PREVENZIONE NELL'AMBIENTE E NEI LUOGHI DI LAVORO"
+title: "Epidemiologia e Statistica"
+subtitle: "Corso di laurea in INFERMIERISTICA"
 author: "[CorradoLanera](www.CorradoLanera.it)"
 date: "YYYY-MM-DD (last update: `r Sys.Date()`)"
 institute: "[Unità di Biostatistica, Epidemiologia e Salute Pubblica](https://www.unipd-ubep.it/) --- University of Padova"
@@ -70,14 +70,14 @@ style_share_again(
 ```{r meta, echo=FALSE}
 meta() %>%
   meta_general(
-    description = "Modulo di STATISTICA MEDICA del corso in STATISTICA E SOCIOLOGIA GENERALE per il corso di laurea in TECNICHE DELLA PREVENZIONE NELL'AMBIENTE E NEI LUOGHI DI LAVORO",
+    description = "Modulo di EPIDEMIOLOGIA E STATISTICA del corso in MANAGEMENT< MEDICINA LEGALE, EPIDEMIOLOGIA E STATISTICA per il corso di laurea in INFERMIERISTICA (sede di Schio)",
     generator = "xaringan and remark.js"
   ) %>% 
   meta_name("github-repo" = "CorradoLanera/tpall") %>% 
   meta_social(
     title = "Statistica e Sociologia Generale",
-    url = "https://corradolanera.github.io/tpall/#1",
-    image = "https://github.com/CorradoLanera/tpall/raw/main/docs/img/cover.jpg",
+    url = "https://corradolanera.github.io/infermieristica22/#1",
+    image = "https://github.com/CorradoLanera/infermieristica22/raw/main/docs/img/cover.jpg",
     og_type = "website",
     og_author = "UBEP",
     twitter_card_type = "summary",
@@ -158,16 +158,16 @@ style_duo_accent(
 <br>
 <br>
 
-# **STATISTICA E SOCIOLOGIA GENERALE**<br>**.orange[STATISTICA MEDICA]**
+# **MANAGEMENT< MEDICINA LEGALE, EPIDEMIOLOGIA E STATISTICA**<br>**.orange[EPIDEMIOLOGIA E STATISTICA]**
 
 -- Topic --
 <br>
 <br>
 <br>
 
-C.d.L. **Tecniche della prevenzione nell'ambiente e nei luoghi di lavoro**
+C.d.L. **Infermieristica** (Schio)
 
-Feltre, a.a. 2021/2022 - 20 ore (2 crediti)
+Feltre, a.a. 2022/2023 - 20 ore (2 crediti)
 
 Corrado Lanera | [**Unità di Biostatistica, Epidemiologia e Salute Pubblica**](https://www.unipd-ubep.it/)
 
@@ -194,7 +194,7 @@ knitr::include_graphics("img/profilo_CL.jpg")
 [`r fontawesome::fa("telegram")`](https://telegram.me/CorradoLanera)
 **@CorradoLanera**
 
-[`r fontawesome::fa("github")`](https://github.com/CorradoLanera/tpall)
+[`r fontawesome::fa("github")`](https://github.com/CorradoLanera/infermieristica22)
 **@UBESP-DCTV**
 
 [`r fontawesome::fa("calendar-check")` ](https://calendly.com/corradolanera) [**calendly.com/corradolanera**](https://calendly.com/corradolanera)
@@ -268,7 +268,7 @@ _If you think the only acceptable performance is the ".orange[perfect performanc
 
 <br>
 
-Slides: [https://corradolanera.github.io/tpall/00-intro_and_info.html](https://corradolanera.github.io/tpall)
+Slides: [https://corradolanera.github.io/infermieristica22/00-intro_and_info.html](https://corradolanera.github.io/infermieristica)
 
 
 [`r fontawesome::fa("link")`](https://www.unipd-ubep.it/) [**www.unipd-ubep.it**](https://www.unipd-ubep.it/) | 
@@ -278,7 +278,7 @@ Slides: [https://corradolanera.github.io/tpall/00-intro_and_info.html](https://c
 [`r fontawesome::fa("twitter")`](https://twitter.com/corradolanera)
 [`r fontawesome::fa("telegram")`](https://telegram.me/CorradoLanera)
 **@CorradoLanera** | 
-[`r fontawesome::fa("github")`](https://github.com/CorradoLanera/tpall)
+[`r fontawesome::fa("github")`](https://github.com/CorradoLanera/infermieristica)
 **@UBESP-DCTV**
 
 [`r fontawesome::fa("calendar-check")` ](https://calendly.com/corradolanera) [**calendly.com/corradolanera**](https://calendly.com/corradolanera)
