--- a/docs/00-intro_and_info.Rmd
+++ b/docs/00-intro_and_info.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Informatica, Statistica, e Fisica Applicata"
-subtitle: "Corso di laurea in ORTOTTICA E ASSISTENZA OFTALMOLOGICA"
+title: "Management, Medicina Legale, Epidemiologia e Statistica"
+subtitle: "Corso di laurea in INFERMIERISTICA"
 author: "[CorradoLanera](www.CorradoLanera.it)"
 date: "YYYY-MM-DD (last update: `r Sys.Date()`)"
 institute: "[Unità di Biostatistica, Epidemiologia e Salute Pubblicah](https://www.unipd-ubep.it/) --- University of Padova"
@@ -73,14 +73,14 @@ style_share_again(
 ```{r meta, echo=FALSE}
 meta() %>%
   meta_general(
-    description = "Modulo di STATISTICA MEDICA del corso in INFORMATICA, STATISTICA, E FISICA APPLICATA per il corso di laurea in ORTOTTICA E ASSISTENZA OFTALMOLOGICA",
+    description = "Modulo di EPIDEMIOLOGIA E STATISTICA del corso in Management, Medicina Legale, Epidemiologia e Statistica per il corso di laurea in INFERMIERISTICA",
     generator = "xaringan and remark.js"
   ) %>% 
-  meta_name("github-repo" = "CorradoLanera/ORTOTTICA") %>% 
+  meta_name("github-repo" = "CorradoLanera/infermieristica22") %>% 
   meta_social(
-    title = "Informatica, Statistica, e Fisica Apllicata",
-    url = "https:///ortottica-slide22",
-    image = "https://github.com/CorradoLanera/ortottica/raw/main/docs/img/cover.jpg",
+    title = "Management, Medicina Legale, Epidemiologia e Statistica",
+    url = "https:///infermieristica22-slide",
+    image = "https://github.com/CorradoLanera/infermieristica22/raw/main/docs/img/cover.jpg",
     og_type = "website",
     og_author = "UBEP",
     twitter_card_type = "summary",
@@ -161,18 +161,18 @@ style_duo_accent(
 <br>
 <br>
 
-# **INFORMATICA, STATISTICA, E FISICA APPLICATA**<br>**.orange[STATISTICA MEDICA]**
+# **Management, Medicina Legale, Epidemiologia e Statistica**<br>**.orange[EPIDEMIOLOGIA E STATISTICA]**
 
 -- Presentazione e informazioni generali --
 <br>
 <br>
 <br>
 
-C.d.L. **Ortottica e Assistenza Oftalmologica**
+C.d.L. **INFERMIERISTICA**
 
 Padova, a.a. 2022/2023 - 20 ore (2 crediti)
 
-Corrado Lanera | [**Unità di Biostatistica, Epidemiologia e Salute Pubblic**](https://www.unipd-ubep.it/)
+Corrado Lanera | [**Unità di Biostatistica, Epidemiologia e Salute Pubblica**](https://www.unipd-ubep.it/)
 
 
 
@@ -184,7 +184,7 @@ class: hide-count
 
 # .orange[Scopo]
 
-- apprendere le conoscenze teoriche di base della statistica medica
+- apprendere le conoscenze teoriche di base della EPIDEMIOLOGIA E STATISTICA
 
 - essere in grado di approcciarsi alla ricerca scientifica
 
@@ -194,7 +194,7 @@ class: hide-count
 
 # .orange[Obiettivi]
 
-- imparare le definizioni e gli operatori base della statistica medica,
+- imparare le definizioni e gli operatori base della EPIDEMIOLOGIA E STATISTICA,
  in particolare riguardo:
  
   + analisi descrittiva dei dati
@@ -261,12 +261,12 @@ class: hide-count
 - Modalità: in presenza, con possibilità di seguire da remoto per
  giustificati motivi
 
-- Zoom: [bit.ly/ortottica-zoom22](https://bit.ly/ortottica-zoom22),
+- Zoom: [bit.ly/infermieristica22-zoom](https://bit.ly/infermieristica22-zoom),
   accessibile anche dal link sul Moodle del corso.
 
-- Materiale didattico: Moodle [bit.ly/ortottica-moodle22](https://bit.ly/ortottica-moodle22)
+- Materiale didattico: Moodle [bit.ly/infermieristica22-moodle](https://bit.ly/infermieristica22-moodle)
 
-- Portale accesso slide: [bit.ly/ortottica-slide22](https://bit.ly/ortottica-slide22)
+- Portale accesso slide: [bit.ly/infermieristica22-slide](https://bit.ly/infermieristica22-slide)
 
 - Registrazioni: Disponibili dopo la lezione sul Moodle del corso.
 
@@ -297,29 +297,29 @@ class: hide-count
 
 Cinque lezioni da 4 _ore_ ciascuna (180' effettivi)
 
-- Lezione 1: martedì 18 ottobre 2022 - 14:30-18:30
+- Lezione 1: giovedì 03 novembre 2022 - 13:30-17:30
   + (60') intro al corso
   + (60') intro a R/RStudio (facoltativo, non oggetto di esame)
   + (60') statistica descrittiva - prerequisiti e definizioni
   
-- Lezione 2: martedì 25 ottobre 2022 - 14:30-18:30
+- Lezione 2: mercoledì 23 novembre 2022 - 08:30-12:30
   + (30') ricapitolazione, domande, dubbi e perplessità
   + (90') statistica descrittiva - misure
   + (60') statistica descrittiva - rappresentazione
 
-- Lezione 3: martedì 8 novembre 2022 - 14:30-18:30
+- Lezione 3: lunedì 05 dicembre 2022 - 08:30-12:30
   + (30') ricapitolazione, domande, dubbi e perplessità
   + (60') basi di probabilità
   + (30') rischi
   + (60') test di screening e teorema di Bayes
 
-- Lezione 4: martedì 15 novembre 2022 - 14:30-18:30
+- Lezione 4: lunedì 12 dicembre 2022 - 08:30-12:30
   + (30') ricapitolazione, domande, dubbi e perplessità
   + (60') modelli/distribuzioni per variabili discrete
   + (60') modelli/distribuzioni per variabili continue
   + (30') trasformazioni e approssimazioni
 
-- Lezione 5: martedì 22 novembre 2022 - 14:30-18:30
+- Lezione 5: giovedì 15 novembre 2022 - 08:30-12:30
   + (30') ricapitolazione, domande, dubbi e perplessità
   + (60') inferenza e stime: intervalli di confidenza
   + (60') inferenza e stime: test d'ipotesi
@@ -378,7 +378,7 @@ loro utilizzo corretto o errato nel produrre i risultati).
 
 
 Un ambiente di lavoro per ciascuno di voi è attivabile e utilizzabile
-gratuitamente su RStudio Cloud collegandosi all'indirizzo: [bit.ly/ortottica-rscloud22](https://bit.ly/ortottica-rscloud22)
+gratuitamente su RStudio Cloud collegandosi all'indirizzo: [bit.ly/infermieristica22-rscloud](https://bit.ly/infermieristica22-rscloud)
 
 
 
@@ -404,13 +404,11 @@ voi.
 predefinito di esercizi svolti e commentati per l'autoapprendimento
 
 
-- **Ricevimento**: i giovedì tra le 17:00 e le 18:30, sono disponibile a 
-  ricevere gli studenti per 25 minuti a sessione, prenotabile con almeno 
-  tre giorni di anticipo, ed entro tre settimane, tramite il link
-  (disponibile su Moodle e riservato esclusivamente agli studenti del
+- **Ricevimento**: sono disponibile a 
+  ricevere gli studenti per 25 minuti a sessione in qualunque giorno o momento in cui non sia già impegnato; l'appuntamento è prenotabile con almeno tre giorni di anticipo, ed entro tre settimane, tramite il link (disponibile su Moodle e riservato esclusivamente agli studenti del
   corso):
   
-  [bit.ly/ortottica-ricevimento22](https://bit.ly/ortottica-ricevimento22).
+  [bit.ly/infermieristica22-ricevimento](https://bit.ly/infermieristica22-ricevimento).
   
 > La settimana precedente una sessione d'esame non è attivo il ricevimento.
 
@@ -501,7 +499,7 @@ knitr::include_graphics("img/profilo_CL.jpg")
 [`r fontawesome::fa("telegram")`](https://telegram.me/CorradoLanera)
 **@CorradoLanera**
 
-[`r fontawesome::fa("calendar-check")` ](https://bit.ly/ortottica-ricevimento22) [**bit.ly/ortottica-ricevimento22**](https://bit.ly/ortottica-ricevimento22)
+[`r fontawesome::fa("calendar-check")` ](https://bit.ly/infermieristica22-ricevimento) [**bit.ly/infermieristica22-ricevimento**](https://bit.ly/infermieristica22-ricevimento)
 
 
 
@@ -529,7 +527,7 @@ _**Can** one be a .orange[good data analyst] **without** being a .orange[half-go
 <br>
 <br>
 
-Diapositive: [bit.ly/ortottica-slide22](https://bit.ly/ortottica-slide22)
+Diapositive: [bit.ly/infermieristica22-slide](https://bit.ly/infermieristica22-slide)
 
 
 [`r fontawesome::fa("link")`](https://www.unipd-ubep.it/) [**www.unipd-ubep.it**](https://www.unipd-ubep.it/) | 
@@ -539,6 +537,6 @@ Diapositive: [bit.ly/ortottica-slide22](https://bit.ly/ortottica-slide22)
 [`r fontawesome::fa("twitter")`](https://twitter.com/corradolanera)
 [`r fontawesome::fa("telegram")`](https://telegram.me/CorradoLanera)
 **@CorradoLanera** |
-[`r fontawesome::fa("calendar-check")` ](https://bit.ly/ortottica-ricevimento22) [**bit.ly/ortottica-ricevimento22**](https://bit.ly/ortottica-ricevimento22)
+[`r fontawesome::fa("calendar-check")` ](https://bit.ly/infermieristica22-ricevimento) [**bit.ly/infermieristica22-ricevimento**](https://bit.ly/infermieristica22-ricevimento)
 
 
