--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Informatica, Statistica, e Fisica Applicata"
-subtitle: "Corso di laurea in ORTOTTICA E ASSISTENZA OFTALMOLOGICA"
+title: "Management, Madicina Leagale, Epidemiologia e Statistica"
+subtitle: "Corso di laurea in INFERMIERISTICA"
 author: "[CorradoLanera](www.CorradoLanera.it)"
 date: "YYYY-MM-DD (last update: `r Sys.Date()`)"
 institute: "[Unità di Biostatistica, Epidemiologia e Salute Pubblicah](https://www.unipd-ubep.it/) --- University of Padova"
@@ -73,14 +73,14 @@ style_share_again(
 ```{r meta, echo=FALSE}
 meta() %>%
   meta_general(
-    description = "Modulo di STATISTICA MEDICA del corso in INFORMATICA, STATISTICA, E FISICA APPLICATA per il corso di laurea in ORTOTTICA E ASSISTENZA OFTALMOLOGICA",
+    description = "Modulo di EPIDEMIOLOGIA E STATISTICA del corso in MANAGEMENT, MEDICINA LEGALE, EPIDEMIOLOGIA E STATISTICA per il corso di laurea in INFERMIERISTICA",
     generator = "xaringan and remark.js"
   ) %>% 
-  meta_name("github-repo" = "CorradoLanera/ORTOTTICA") %>% 
+  meta_name("github-repo" = "CorradoLanera/INFERMIERISTICA") %>% 
   meta_social(
-    title = "Informatica, Statistica, e Fisica Apllicata",
-    url = "bit.ly/ortottica-slide22",
-    image = "https://github.com/CorradoLanera/ortottica/raw/main/docs/img/cover.jpg",
+    title = "Management, Medicina Legale, Epidemiologia e Statistica",
+    url = "bit.ly/infermieristica22-slide",
+    image = "https://github.com/CorradoLanera/infermieristica22/raw/main/docs/img/cover.jpg",
     og_type = "website",
     og_author = "UBEP",
     twitter_card_type = "summary",
@@ -157,9 +157,9 @@ style_duo_accent(
 ```
 
 
-# **.orange[STATISTICA MEDICA]**
+# **.orange[EPIDEMIOLOGIA E STATISTICA]**
 
-C.d.L. **Ortottica e Assistenza Oftalmologica**
+C.d.L. **INFERMIERISTICA**
 
 Padova, a.a. 2022/2023 - 20 ore (2 crediti)
 
@@ -167,17 +167,17 @@ Padova, a.a. 2022/2023 - 20 ore (2 crediti)
 
 **Giorno**    | **Tema**                 | **Diapositive**
 -------------:|:-------------------------|:--------------------
-2022/10/18    | Intro e info             | [Intro e info](00-intro_and_info.html)
-2022/10/18    | R e RStudio              | [R e RStudio](01-r_rstudio.html)
-2022/10/25    | Descrittive              | [Descrittive](02-descrittive.html)
-2022/11/08    | Probabilità              | 
-2022/11/15    | Distribuzioni            | 
-2022/11/22    | Inferenza, IC e p-value  | 
+2022/11/03    | Intro e info             | 
+2022/11/03    | R e RStudio              | 
+2022/11/23    | Descrittive              | 
+2022/12/05    | Probabilità              | 
+2022/12/12    | Distribuzioni            | 
+2022/12/15    | Inferenza, IC e p-value  | 
 
 </small>
 
 Corrado Lanera | [**Unità di Biostatistica, Epidemiologia e Salute Pubblica**](https://www.unipd-ubep.it/)
 
 [`r fontawesome::fa("envelope")`](mailto:Corrado.Lanera@ubep.unipd.it) [**Corrado.Lanera**__.orange[@ubep.unipd.it]__](mailto:Corrado.Lanera@ubep.unipd.it) | 
-[`r fontawesome::fa("calendar-check")` ](https://bit.ly/ortottica-ricevimento22) [**bit.ly/ortottica-ricevimento22**](https://bit.ly/ortottica-ricevimento22)
+[`r fontawesome::fa("calendar-check")` ](https://bit.ly/infermieristica22-ricevimento) [**bit.ly/infermieristica22-ricevimento**](https://bit.ly/infermieristica22-ricevimento)
 
