--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -167,8 +167,8 @@ Padova, a.a. 2022/2023 - 20 ore (2 crediti)
 
 **Giorno**    | **Tema**                 | **Diapositive**
 -------------:|:-------------------------|:--------------------
-2022/11/03    | Intro e info             | 
-2022/11/03    | R e RStudio              | 
+2022/11/03    | Intro e info             | [Intro e info](00-intro_and_info.html)
+2022/11/03    | R e RStudio              | [R e RStudio](01-r_rstudio.html)
 2022/11/23    | Descrittive              | 
 2022/12/05    | Probabilità              | 
 2022/12/12    | Distribuzioni            | 
