--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -172,7 +172,7 @@ Padova, a.a. 2022/2023 - 20 ore (2 crediti)
 2022/11/05    | Descrittive (intro)      | [Descrittive](02-descrittive.html)
 2022/12/05    | Probabilità              | [Probabilità](03-probabilita.html)
 2022/12/15    | Descrittive (loc, graph) | [Descrittive](02-descrittive.html)
-2022/12/17    | Distribuzioni            | 
+2022/12/17    | Distribuzioni            | [Distribuzioni](04-distribuzioni.html)
 2022/12/20    | Inferenza, IC e p-value  | 
 
 </small>
